--- a/style.css
+++ b/style.css
@@ -9,21 +9,89 @@
     text-align: center;
     width: 1400px;
     height: 590px;
-      
+}
+
+.imline {
+    border: 2px solid black;
+    width: 405px;
+    height: 195px;   
+    margin-left: auto;
+    margin-right: auto;
+    width: 405px;
+    padding: 40px;
 }
 
 .text {
-    border-width: 1px;
-
+    color: #212121;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 250%;
+    text-align: center;
 }
 
 .line {
-    box-sizing: border-box;
+    background-color: orangered; 
+    margin: auto;
+    width: 64px; 
+    height: 2px; 
+}
+
+.texts {
+    color:#86878B;
+    font-family: 'Open Sans', sans-serif;
+    font-size:14px;
+    box-align:left;
+}
+
+.inline1 {
+    width: 350px;
+    height: 197px;
+    border: 2px solid black;
+    background-color: white;
+    margin: 10px;
+    float: left;
+}
+
+.circle {
+	background-color: white;
     border: 2px solid orangered;
-    background-color: orangered;
-    padding: 163px, 668px, 425px;
-    width: 64px;
-    height: 2px;
-    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 50px;
+    width: 70px;
+    height: 70px;
+}
+
+.inline2 {
+    width: 350px;
+    height: 197px;
+    border: 2px solid black;
+    background-color: white;
+    margin: 10px;
+    float: left;
+    
+}
+
+
+.inline3 {
+    width: 350px;
+    height: 197px;
+    border: 2px solid black;
+    background-color: white;
+    margin: 10px;
+    float: left;
+}
+
+
+h3 {
+    color:#333333;
+    font-family: 'Open Sans', sans-serif;
+    font-size:20px;
+    text-align:center;
+}
+
+p {
+    color: #86878B;
+    font-size: 14px;
+    font-family: 'Open Sans', sans-serif;
 
 }
